Fix JVM running out of memory/crash on Solaris X86 host